--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Техномарт</title>
     <link href="css/normalize.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cuprum" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
@@ -114,106 +115,108 @@
             <a class="btn" href="#">Бесплатно</a>
           </div>
         </div>
-        <div class="popular">
-          <div class="header">
+        <div class="popular clearfix">
+          <div class="header clearfix">
             <h2>Популярные товары:</h2>
             <a class="btn" href="#">Все популярные товары</a>
           </div>
-          <div class="good">
-            <img src="img/.jpg" width="" height="" alt="">
-            <a class="btn btn-buy" href="#">Купить</a>
-            <a class="btn btn-bookmark" href="#">В закладки</a>
-            <span class="good-name">Перфоратор BOSCH</span>
-            <span class="good-name">BFG-9000</span>
-            <span class="old-price">32500 Р.</span>
-            <a class="btn btn-price">25500 Р.</a>
-          </div>
-          <div class="good">
-            <img src="img/.jpg" width="" height="" alt="">
-            <a class="btn btn-buy" href="#">Купить</a>
-            <a class="btn btn-bookmark" href="#">В закладки</a>
-            <span class="good-name">Перфоратор BOSCH</span>
-            <span class="good-name">BFG-9000</span>
-            <span class="old-price">22500 Р.</span>
-            <a class="btn btn-price">15500 Р.</a>
-          </div>
-          <div class="good">
-            <img src="img/.jpg" width="" height="" alt="">
-            <a class="btn btn-buy" href="#">Купить</a>
-            <a class="btn btn-bookmark" href="#">В закладки</a>
-            <span class="good-name">Перфоратор BOSCH</span>
-            <span class="good-name">BFG-6000</span>
-            <span class="old-price">30500 Р.</span>
-            <a class="btn btn-price">25500 Р.</a>
-          </div>
-          <div class="good new">
-            <img src="img/.jpg" width="" height="" alt="">
-            <a class="btn btn-buy" href="#">Купить</a>
-            <a class="btn btn-bookmark" href="#">В закладки</a>
-            <span class="good-name">Перфоратор BOSCH</span>
-            <span class="good-name">BFG-2000</span>
-            <span class="old-price"></span>
-            <a class="btn btn-price">12500 Р.</a>
+          <div class="showcase">
+            <div class="good">
+              <img src="img/bfg-9000.jpg" width="216" height="180" alt="BFG-9000">
+              <div class="buttons">
+                <a class="btn btn-buy icon-basket" href="#">Купить</a>
+                <a class="btn btn-bookmark" href="#">В закладки</a>
+              </div>
+              <div>
+                <span class="good-name">Перфоратор BOSCH</span>
+                <span class="good-name">BFG-9000</span>
+                <span class="old-price">32500 Р.</span>
+                <span class="new-price">25500 Р.</span>
+              </div>
+            </div>
+            <div class="good">
+              <img src="img/bfg-3000.jpg" width="216" height="180" alt="BFG-3000">
+              <div class="buttons">
+                <a class="btn btn-buy icon-basket" href="#">Купить</a>
+                <a class="btn btn-bookmark" href="#">В закладки</a>
+              </div>
+              <span class="good-name">Перфоратор BOSCH</span>
+              <span class="good-name">BFG-3000</span>
+              <span class="old-price">22500 Р.</span>
+              <span class="new-price">15500 Р.</span>
+            </div>
+            <div class="good">
+              <img src="img/bfg-6000.jpg" width="216" height="180" alt="BFG-6000">
+              <div class="buttons">
+                <a class="btn btn-buy icon-basket" href="#">Купить</a>
+                <a class="btn btn-bookmark" href="#">В закладки</a>
+              </div>
+              <span class="good-name">Перфоратор BOSCH</span>
+              <span class="good-name">BFG-6000</span>
+              <span class="old-price">30500 Р.</span>
+              <span class="new-price">25500 Р.</span>
+            </div>
+            <div class="good new">
+              <img src="img/bfg-2000.jpg" width="216" height="180" alt="BFG-2000">
+              <div class="buttons">
+                <a class="btn btn-buy icon-basket" href="#">Купить</a>
+                <a class="btn btn-bookmark" href="#">В закладки</a>
+              </div>
+              <span class="good-name">Перфоратор BOSCH</span>
+              <span class="good-name">BFG-2000</span>
+              <span class="old-price"></span>
+              <span class="new-price">12500 Р.</span>
+            </div>
           </div>
         </div>
         <div class="popular">
-          <div class="header">
+          <div class="header clearfix">
             <h2>Популярные производители:</h2>
             <a class="btn" href="#">Все производители</a>
           </div>
-          <div class="manufacturer">
-            <img width="218" height="143" src="img/" alt="Bosch">
-          </div>
-          <div class="manufacturer">
-            <img width="218" height="143" src="img/" alt="Makita">
-          </div>
-          <div class="manufacturer">
-            <img width="218" height="143" src="img/" alt="DeWalt">
-          </div>
-          <div class="manufacturer">
-            <img width="218" height="143" src="img/" alt="Интерскол">
-          </div>
-          <div class="manufacturer">
-            <img width="218" height="143" src="img/" alt="Hitachi">
-          </div>
-          <div class="manufacturer">
-            <img width="218" height="143" src="img/" alt="LG">
-          </div>
-          <div class="manufacturer">
-            <img width="218" height="143" src="img/" alt="AEG">
-          </div>
-          <div class="manufacturer">
-            <img width="218" height="143" src="img/" alt="Metabo">
+          <div class="manufacturers clearfix">
+            <a>Bosch</a>
+            <a>Makita</a>
+            <a>DeWalt</a>
+            <a>Интерскол</a>
+            <a>Hitachi</a>
+            <a>LG</a>
+            <a>AEG</a>
+            <a>Metabo</a>
           </div>
         </div>
       </div>
-      <div class="shadowy">
+      <div class="main-content shadowy">
         <div class="container">
-          <h3>Сервисы</h3>
+          <h3 class="main-title-3">Сервисы</h3>
           <p>
             Хороший интернет-магазин отличается от плохого не только ценами!<br>
             Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
           </p>
-          <div class="main-column separator">
-            <a class="btn btn-service selected" href="#">Доставка</a>
-            <a class="btn btn-service" href="#">Гарантия</a>
-            <a class="btn btn-service" href="#">Кредит</a>
-          </div>
-          <div class="main-column">
-            <h4>Доставка</h4>
-            <p>
-              Мы с удовольствием доставим ваш товар прямо к вашему подъезду
-              бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!
-            </p>
-          </div>
-          <div class="main-column">
-            <img src="" width="" height="" alt="грузовик">
+          <div class="service clearfix">
+            <div class="main-column service-buttons">
+              <a class="btn btn-service selected" href="#">Доставка</a>
+              <a class="btn btn-service" href="#">Гарантия</a>
+              <a class="btn btn-service" href="#">Кредит</a>
+            </div>
+            <div class="main-column">
+              <h4>Доставка</h4>
+              <p>
+                Мы с удовольствием доставим ваш товар прямо<br>
+                к вашему подъезду совершенно бесплатно!<br>
+                Ведь мы неплохо заработаем,<br>
+                поднимая его на ваш этаж!
+              </p>
+            </div>
+            <div class="main-column truck">
+              <img src="img/truck.png" width="206" height="146" alt="грузовик">
+            </div>
           </div>
         </div>
       </div>
-      <div class="container">
+      <div class="main-content container">
         <div class="left">
-          <h3>Компания «ТЕХНОМАРТ»</h3>
+          <h3 class="main-title-3">Компания «ТЕХНОМАРТ»</h3>
             <P>
               Настоящий мужской шопинг начинается здесь! Огромный выбор товаров
               для ремонта и строительства не оставит равнодушными любителей
@@ -231,7 +234,7 @@
             <a class="btn" href="#">Подробнее о компании</a>
         </div>
         <div class="right">
-          <h3>Контакты</h3>
+          <h3 class="main-title-3">Контакты</h3>
           <p>
             Вы можете забрать товар сами,<br>
             заехав в наш офис:
