--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <a class="btn" href="#">Бесплатно</a>
           </div>
         </div>
-        <div class="popular clearfix">
+        <div class="main-content clearfix">
           <div class="header clearfix">
             <h2>Популярные товары:</h2>
             <a class="btn" href="#">Все популярные товары</a>
@@ -169,7 +169,7 @@
             </div>
           </div>
         </div>
-        <div class="popular">
+        <div class="main-content">
           <div class="header clearfix">
             <h2>Популярные производители:</h2>
             <a class="btn" href="#">Все производители</a>
@@ -195,7 +195,7 @@
           </p>
           <div class="service clearfix">
             <div class="main-column service-buttons">
-              <a class="btn btn-service selected" href="#">Доставка</a>
+              <span class="btn btn-service selected" href="#">Доставка</span>
               <a class="btn btn-service" href="#">Гарантия</a>
               <a class="btn btn-service" href="#">Кредит</a>
             </div>
@@ -214,7 +214,7 @@
           </div>
         </div>
       </div>
-      <div class="main-content container">
+      <div class="main-content container clearfix">
         <div class="left">
           <h3 class="main-title-3">Компания «ТЕХНОМАРТ»</h3>
             <P>
@@ -240,6 +240,13 @@
             заехав в наш офис:
           </p>
           <div class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19
+            98.5991043651616!2d30.320894615906877!3d59.938794181876204!2m3!1f0!2f
+            0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53
+            d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4s
+            IDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru
+            !2sru!4v1484289128751" width="300" height="158" frameborder="0" style
+            ="border:0" allowfullscreen></iframe>
           </div>
           <a class="btn" href="#">Заблудились? Напишите нам!</a>
         </div>
@@ -247,8 +254,8 @@
     </main>
     <footer class="main-footer">
       <div class="top">
-        <div class="container">
-          <div class="main-footer-left">
+        <div class="container clearfix">
+          <div class="left">
             <div class="logo">
               Техномарт
             </div>
@@ -257,7 +264,7 @@
               +7 (812) 555-05-55
             </p>
           </div>
-          <div class="main-footer-right">
+          <div class="right">
             <div>
               <a href="#">Компания</a>
               <a href="#">Новости</a>
@@ -275,24 +282,24 @@
         </div>
       </div>
       <div class="bottom">
-        <div class="container">
+        <div class="container clearfix">
           <div class="main-column">
             <p>
-              2010-2016 Компания «ТЕХНОМАРТ»<br> Все права защищены
+              © 2010-2016 Компания «ТЕХНОМАРТ»<br> Все права защищены
             </p>
           </div>
-          <div class="main-column">
-            <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-            <a class="social-btn social-btn-vk" href="#">Фейсбук</a>
-            <a class="social-btn social-btn-vk" href="#">Инстаграмм</a>
+          <div class="main-column social">
+            <a class="social-btn icon-vk" href="#">Вконтакте</a>
+            <a class="social-btn icon-facebook" href="#">Фейсбук</a>
+            <a class="social-btn icon-instagramm" href="#">Инстаграмм</a>
           </div>
           <div class="main-column">
-            <div class="copyright-left">
-              Обратная связь
+            <div class="copyright">
+              <span>Обратная связь</span>
               <a href="#">turetski212@gmail.com</a>
             </div>
-            <div class="copyright-right">
-              Дизайн
+            <div class="copyright">
+              <span>Дизайн</span>
               <a href="https://htmlacademy.ru">HTML-Academy</a>
             </div>
           </div>
